--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ to{opacity:1;}
 <div class="counter" id="days"></div>
 
 <div class="gallery">
-<img src="C:\Users\LENOVO\Pictures\IMG_4051.jpg" alt="photo1">
-<img src="C:\Users\LENOVO\Pictures\IMG_4216.jpg" alt="photo2">
+<img src="IMG_4051.jpg" alt="photo1">
+<img src="IMG_4216.jpg" alt="photo2">
 </div>
 
 <div class="proposal-btn">
@@ -214,3 +214,4 @@ document.getElementById("proposalResponse").innerText="Yayyy ❤️ She said YES
 
 </body>
 </html>
+
