--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ to{opacity:1;}
 
 <!-- MAIN -->
 <div id="main">
-<h1>Hi Babyy❤️</h1>
+<h1>Happy Valentine Bhunturii❤️</h1>
 
 <div class="typing" id="message"></div>
 
@@ -214,4 +214,5 @@ document.getElementById("proposalResponse").innerText="Yayyy ❤️ She said YES
 
 </body>
 </html>
+
 
